--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body><%= render "shared/navbar" %>
 <%= render "shared/flashes" %>
-
+<%= render 'shared/back_to_top' %>
     <%= yield %>
   </body>
 </html>
